# audio-message-transcription

./: .editorconfig  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  api-proxy.js  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  slack.py
app/: api.py  slack.py
transcription_bot/: slack.py  tg.py
