[tool.poetry]
name = "tg-bot-whisper"
version = "0.1.0"
description = ""
authors = ["kana <andrew4chrome@gmail.com>"]
packages = [{include = "tg_bot_whisper"}]

[tool.poetry.dependencies]
python = "^3.9"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
pydub = "^0.25.1"
openai = "^0.27.7"
python-dotenv = "^1.0.0"
slack-sdk = "^3.23.0"
slack-bolt = "^1.18.0"
ngrok = "^0.12.0"
moviepy = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
