[tool.poetry]
name = "transcription-bot"
version = "0.1.0"
description = ""
authors = [
    "kana <andrew4chrome@gmail.com>",
]
packages = [
    { include = "transcription_bot" },
]

[tool.poetry.dependencies]
python = "^3.12"

pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
pydub = "^0.25.1"
openai = "^2.9.0"
python-dotenv = "^1.2.1"
slack-sdk = "^3.39.0"
slack-bolt = "^1.27.0"
ngrok = "^1.4.0"
moviepy = "^2.2.1"
fastapi = "^0.124.0"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.44"
alembic = "^1.16.5"
asyncpg = "^0.31.0"
psycopg2-binary = "^2.9.11"


[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
